[gd_scene load_steps=30 format=2]

[ext_resource path="res://assets/player/player_shoot_uzi.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/player/player_old.png" type="Texture" id=3]
[ext_resource path="res://assets/player/player_shoot_pistol.png" type="Texture" id=4]
[ext_resource path="res://assets/player/player.png" type="Texture" id=5]
[ext_resource path="res://assets/player/player_walk.png" type="Texture" id=6]
[ext_resource path="res://assets/player/player_death.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.0
height = 16.0

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 12.5
} ]

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 7 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "shoot_pistol",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "shoot_uzi",
"speed": 20.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "unarmed",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "with_pistol",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "with_uzi",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=26]
radius = 11.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Feet" type="AnimatedSprite" parent="."]
position = Vector2( 20, 1 )
frames = SubResource( 25 )

[node name="Body" type="AnimatedSprite" parent="."]
position = Vector2( 20, 1 )
frames = SubResource( 14 )
animation = "unarmed"
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
smoothing_enabled = true
smoothing_speed = 1.0
drag_margin_left = 0.4
drag_margin_top = 0.4
drag_margin_right = 0.4
drag_margin_bottom = 0.4
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="PistolTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="UziTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="GunL" type="Position2D" parent="."]
position = Vector2( 48, -16 )

[node name="GunR" type="Position2D" parent="."]
position = Vector2( 48, 16 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
modulate = Color( 0.478431, 0, 1, 1 )
position = Vector2( 1, 0 )
shape = SubResource( 26 )

[connection signal="timeout" from="PistolTimer" to="." method="_on_PistolTimer_timeout"]
[connection signal="timeout" from="UziTimer" to="." method="_on_UziTimer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
